--- a/P3/Velferd.html
+++ b/P3/Velferd.html
@@ -12,14 +12,42 @@
         <div class="gruppetekst">
           <h1>Velferdgruppen</h1>
           <p>
-            Tekst
+            Å sette opp en revy krever hardt arbeid, svette og tårer. De andre
+            undergruppene bygger, spiller, danser, skriver, syr, rigger og
+            reklamerer gjennom hele året for å få satt opp en vidunderlig revy
+            når februar omsider kommer! Revyen er en velfungerende maskin og i
+            denne maskinen er det oss i velferdsgruppa som er selve energikilden
+            som holder det hele gående!<br><br>
+            Velferdsarmeen, som vi kaller oss, har hovedansvaret for at
+            revymedlemmene husker på at det er mulig å ta seg en pause en gang
+            i blant! Armert med frukt, kjeks, kaffe, kaker, saft og brettspill
+            infiltrerer vi de andre gruppenes territorier, får i dem føde og
+            kidnapper de mest trengende tilbake til velferdsrommet! Der blir
+            vedkommende puttet i et utopisk miljø slik at de kan gå tilbake til
+            revyarbeidet med energien på topp! Selv utenom de mest stressende
+            periodene står velferdsgruppa fram for å minne folk på noe av det
+            viktigste her i Naborevyen: revy skal jo være gøy!<br><br>
+            Stresstyranniet skal bekjempes, slitsomhet skal avvikles og glede skal spres!<br>
+            Lenge leve kosen! 
           </p>
         </div>
         <div class="gruppeleder">
           <img src="Bilder/Undergruppebilder/Fake_PR.jpg" class="lederbilde" alt="Leder">
           <h2>Velferdssjef: Ferdinand Tomek Marnburg</h2>
           <p>
-            Tekst om lederen
+            Den karen du ser på bilde over er kjent som Velferdinand her i
+            Naborevyen, men på folkemunne er han bedre kjent som Ferdinand
+            eller “Gira.” Som 4. klassing på LUR har jeg opplevd mangt gjennom
+            mine studietid, og har alltid hatt et ekstra fokus på det å kose
+            seg. I tillegg er jeg også selvdiagnostisert “verv-avhengig.” Det
+            tok dermed ikke mye overbevisning før jeg tok imot stafettpinnen
+            fra min forløper!<br><br>
+            Utenom å lede den koselige Velferdsarmeen, forsøke å ikke gå flere
+            tusen i minus og være en levende stressball har jeg også som
+            Velferdssjef hovedansvaret for alle Naborevyens festligheter ila.
+            revyåret. Lokaler må leies, mailer må sendes og opplegg må konstueres
+            eller delegeres! Personlig så er det beste med vervet at jeg kan gjøre
+            koselige ting å si til alle at jeg er produktiv!
           </p>
         </div>
       </div>
