Siste bit av P4, med egen css i mappa

--- a/P3/Changes/P3_Changes_37.html
+++ b/P3/Changes/P3_Changes_37.html
@@ -257,7 +257,7 @@ hovedsiden for undergruppesidene.
 	</table>
 	<p>
 		Noe som er viktig å merke med denne planen er at vi ikke satt mye hver for oss og jobbet,
-		men hjalp hverandre mye når det oppsto feil. Det gir derfor ikke mulig å si at en enkelt person
+		men hjalp hverandre mye når det oppsto feil. Det gir derfor ikke mening å si at en enkelt person
 		gjorde en enkelt ting.<br>
 	</p>
   </body>
