--- a/P4/P4_project_testing.html
+++ b/P4/P4_project_testing.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>P4 Project Testing</title>
-    <link rel="stylesheet" href="../P2/style.css">
+    <link rel="stylesheet" href="Doc_style.css">
   </head>
   <body>
     <h1>P4 Project Testing</h1>
@@ -31,11 +31,19 @@
 
     <h2>Testpublikum</h2>
     <p>
-
+      Undersøkelsen ble sendt ut til de som kommer til å bruke nettsiden mest, altså revystyret.
+      Den ble også lagt ut i gruppa til årets revy på Facebook. På den måten nådde vi mest mulig ut til
+      målgruppen til nettsiden. Den endelige oppdelingen av de 15 svarene vi fikk på undersøkelsen
+      var: 8 (53.3%) Revystyremedlemmer, 5 (33.3%) studenter, 1 (6.7%) innlagt tilbakemelding fra live-testing, og
+      1 (6.7%) media og kommunikasjon-elev.
     </p>
 
     <h2>Testplattformer</h2>
-    <p></p>
+    <p>
+      Blant responsene på undersøkelsen brukte 9 personer PC, 3 brukte mobiltelefon, 2 brukte mac,
+      og 1 brukte både PC og mobil. <br>
+      Når det gjelder nettlesere brukte 11 personer Google Chrome, og 4 brukte Safari.
+    </p>
 
     <h2>Oppsummering av tilbakemeldinger</h2>
     <h3>Testerunde 1</h3>
