--- a/P4/P4_project_testing.html
+++ b/P4/P4_project_testing.html
@@ -69,7 +69,8 @@
       mobil/nettbrett- og desktop-versjon, som resulterte i at hvis nettsiden var akkurat 900 piksler bred, forsvant
       navigasjonsbaren på toppen av hjemmesiden. Vi fikk også tilbakemelidng om at teksten i footeren,
       som var svart og grå, hadde for lite kontrast mot mørkerød bakgrunn,
-      og at YouTube-ikonet hadde lysere bakgrunn enn Facebook- og Instagram-ikonet.
+      og at YouTube-ikonet hadde lysere bakgrunn enn Facebook- og Instagram-ikonet, i tillegg til at innlastingstiden
+      på arkivsiden var lastet inn tregt på Chrome.
       Mindre tekniske ting inkluderte at undergruppesidene var litt tomme,
       og at det godt kunne vært litt mer tekst og evt noen flere blider på disse.
     </p>
@@ -94,13 +95,14 @@
       og kontrasten i footeren, mens noen av de andre tingene som ikke hadde like enkle løsninger ble igjen nedprioritert.
       Fargen på YouTube-ikonet er derfor fortsatt ikke helt likt de andre ikonene i footeren. Vi oppdaget også noen småfeil
       her og der mens vi testet selv, og brukte mye tid på å fikse disse.
-      Vi har fortsatt ikke gjort noe med arkiv-siden, da dette hadde blitt veldig mye jobb,
-      og kalenderen fra Google ser ganske uforandret ut. Det er mye mer vi kunne gjort av småting,
+      Vi har fått til å lage et album med komprimerte bilder til arkrivet, som gjør at siden laster mye raskere inn,
+      men kalenderen fra Google ser ganske uforandret ut. Det er mye mer vi kunne gjort av småting,
       men dette er de største tingene vi bevisst har latt være å gjøre noe med.
     </p>
     <h2>Refleksjoner</h2>
     <p> Prosjektet har vært en både innholdsrik og lærerik erfaring i webdesign. Vi har fått til mye, men samtidig opplevd mye frustrasjon og tull med css og js.<br>
        Dette har ført til at vi har lært en god del om hva vi kan gjøre og det vi ikke burde gjøre i slike prosjekt. For det første valgte vi å prøve å implementere det responsive designet etter at nettsiden var ferdig for større skjermer. Dette var en åpenbar feil, da vi måtte redesigne store deler av siden slik at det var mulig å bruke på mobile enheter. Dette gå til syvende og sist et bedre utseende på siden også for store skjermer. Erfaringen er at vi burde enten ha designet mobil først, eller testet aktivt begge underveis. Dette ble antatt gjort ved bruk av utviklerverktøyet til Google Chrome, men erfaringen fra testingen med faktiske telefoner er at dette ikke representerer hvordan det faktisk blir på små skjermer. <br>
+       
     <br> Videre har det vært en utfordring å få til å implementere det vi ville implementere uten bruk av mer avanserte webteknologier, som JQuery, React, PHP og lignende. Vi har løst de problemene vi har møtt med iver, pågangsmot og naivitet og fått implementert relativt mye av det vi ønsket i starten. <br>
       Vi har jobbet tett som et team, alle har samarbeidet og fått sine egne områder for ansvar og med det ekspertise. Vi kunne ha vært bedre på å oppdatere hverandre på gode måter å løse problem på, for når alle finner en unik løsning på samme problem så blir det mye rart som ikke nødvendigvis fungerer så veldig bra sammens. </p>
   </body>
